<resources>
    <string name="app_name">ClientManagement</string>
    <string name="home_btnMeeting">MEETINGS</string>
    <string name="home_btnClient">CLIENTS</string>
    <string name="home_btnProfile">COMPANY / PROFILE</string>
    <string name="insertsuccess">Insert success</string>
    <string name="inserterror">Insert error</string>
    <string name="updatesuccess">Update success</string>
    <string name="updateerror">Update error</string>
    <string name="deletesuccess">Delete success</string>
    <string name="deleteerror">Delete error</string>
    <string name="contextUpdate">Update</string>
    <string name="contextDelete">Delete</string>
    <string name="dialogClient_number_txt">Number:</string>
    <string name="dialogClient_location_txt">Location:</string>
    <string name="dialogClient_surname_txt">Surname:</string>
    <string name="dialogClient_name_txt">Name:</string>
    <string name="dialogMeeting_description_txt">Description:</string>
    <string name="dialogMeeting_end_txt">End hour:</string>
    <string name="dialogMeeting_start_txt">Start hour:</string>
    <string name="fromCliente_edtPhoto">Photo</string>
    <string name="fromCliente_edtName">Name</string>
    <string name="fromCliente_edtSurname">Surname</string>
    <string name="fromCliente_edtLocation">Location</string>
    <string name="fromCliente_edtNumber">Number</string>
    <string name="formMeeting_date">Date</string>
    <string name="formMeeting_start">Start hour</string>
    <string name="formMeeting_end">End hour</string>
    <string name="formMeeting_description">Description</string>
    <string name="no_maps">You do not have Google Maps</string>
    <string name="profile_name">Name</string>
    <string name="profile_cif">CIF</string>
    <string name="profile_location">Location</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_mail">Mail</string>
    <string name="AcceptAlert">Aceptar</string>
    <string name="TitleAlert">Not company detected</string>
    <string name="MessageAlert">There is no company stored. Go to the Company form.</string>
    <string name="no_clients_form">There are no clients to choose</string>
    <string name="ERROR_MEETING_DATE_FORMAT">The date has to be in YYYY-MM-DD format</string>
    <string name="ERROR_MEETING_HOUR_START_FORMAT">The hour of start has to be in HH:MM format</string>
    <string name="ERROR_MEETING_HOUR_END_FORMAT">The hour of end has to be in HH:MM format</string>
    <string name="ERROR_MEETING_HOUR_END_BEFORE">The end hour is smaller than the start hour</string>
    <string name="ERROR_MEETING_DESCRIPTION_EMPTY">There is no description</string>
    <string name="ERROR_MEETING_DESCRIPTION_SHORT">The description is too short (min 6 characters)</string>
    <string name="ERROR_MEETING_DESCRIPTION_LONG">The description is too long (min 200 characters)</string>
    <string name="ERROR_CLIENT_NAME_EMPTY">There is no name</string>
    <string name="ERROR_CLIENT_NAME_SHORT">The name is too short (min 3 characters)</string>
    <string name="ERROR_CLIENT_NAME_LONG">The name is too long (max 20 characters)</string>
    <string name="ERROR_CLIENT_SURNAME_EMPTY">There is no surname</string>
    <string name="ERROR_CLIENT_SURNAME_SHORT">The surname is too short (min 3 characters)</string>
    <string name="ERROR_CLIENT_SURNAME_LONG">The surname is too long (max 40 characters)</string>
    <string name="ERROR_CLIENT_LOCATION_EMPTY">There is no location</string>
    <string name="ERROR_CLIENT_NUMBER_EMPTY">There is no number</string>
    <string name="ERROR_CLIENT_NUMBER_SHORT">The number is too short (min 9 characters)</string>
    <string name="ERROR_CLIENT_NUMBER_LONG">The number is too long (max 9 characters)</string>
    <string name="insertNotification_title">New client inserted</string>
    <string name="insertNotification_description">Click to open the clients list</string>
    <string name="meetingNotification_title">Meeting alert</string>
    <string name="meetingNotification_desc">You have meetings for today, click to see the list</string>
    <string name="meetingNotification_title_no">You do not have meetings today</string>
</resources>
