<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Spinner
        android:id="@+id/formMeeting_spinner"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/formMeeting_date"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formMeeting_spinner"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/formMeeting_date"
        android:inputType="date"
        android:labelFor="@+id/fromCliente_edtName" />

    <EditText
        android:id="@+id/formMeeting_start"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formMeeting_date"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/formMeeting_start"
        android:inputType="text"
        android:labelFor="@+id/fromCliente_edtSurname" />

    <EditText
        android:id="@+id/formMeeting_end"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formMeeting_start"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/formMeeting_end"
        android:inputType="text"
        android:labelFor="@+id/fromCliente_edtLocation" />

    <EditText
        android:id="@+id/formMeeting_description"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formMeeting_end"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:hint="@string/formMeeting_description"
        android:inputType="number"
        android:labelFor="@+id/fromCliente_edtNumber"
        android:lines="6"
        android:maxLines="6"
        android:minLines="6" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/formMeeting_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/formMeeting_description"
        android:layout_centerHorizontal="true" />
</RelativeLayout>