<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialogMeeting_start_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialogMeeting_start_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogMeeting_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/dialogMeeting_start_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialogMeeting_end_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogMeeting_start_txt"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialogMeeting_end_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogMeeting_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogMeeting_start_txt"
        android:layout_toEndOf="@+id/dialogMeeting_end_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/dialogMeeting_description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogMeeting_end_txt"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/dialogMeeting_description_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogMeeting_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialogMeeting_description_txt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

</RelativeLayout>